deployment/app-pagamentos-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-pagamentos
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app-pagamentos
  template:
    metadata:
      labels:
        app: app-pagamentos
    spec:
      containers:
        - name: app-pagamentos
          image: DOCKER_IMAGE
          ports:
            - containerPort: 8080
