deployment/app-pagamentos-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-pagamentos-svc
spec:
  type: ClusterIP
  selector:
    app: pedeai-pagamentos
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
